--- a/src/pages/player/PlayerPage.css
+++ b/src/pages/player/PlayerPage.css
@@ -15,6 +15,15 @@
   margin: 1em 2em;
 }
 /* ===============
+   audiobook-list
+   =============== */
+.player-page .audiobook-list {
+  position: relative;
+  top: 140px;
+  margin: 0em 2em;
+}
+
+/* ===============
    drawer |29px bar
    =============== */
 .player-page .drawer {
