--- a/src/pages/player/PlayerPage.css
+++ b/src/pages/player/PlayerPage.css
@@ -20,7 +20,7 @@
 .player-page .audiobook-list {
   position: relative;
   top: 140px;
-  margin: 0em 2em;
+  margin: auto auto;
 }
 
 /* ===============
