--- a/src/global.css
+++ b/src/global.css
@@ -12,6 +12,9 @@ body,
   width: 100%;
   background-color: #161c21;
 }
+.pointer {
+  cursor: pointer;
+}
 /* ===============
    card
    =============== */
