✨variable playback-speed added

--- a/src/components/audio-player-controls/AudioPlayerControls.css
+++ b/src/components/audio-player-controls/AudioPlayerControls.css
@@ -111,4 +111,6 @@
         position: relative;
         top: -1px;
         cursor: pointer;
+        width: 45px;
+        text-align: left;
     }
