--- a/src/pages/admin-tools/add-audiobook/AddAudiobookPage.css
+++ b/src/pages/admin-tools/add-audiobook/AddAudiobookPage.css
@@ -3,32 +3,42 @@
    =============== */
 .add-audiobook-page {
 }
+.add-audiobook-page .close-button {
+  background: url('./assets/icon-close.svg');
+  background-size: 11px 11px;
+  width: 11px;
+  height: 11px;
+  position: fixed;
+  top: 20px;
+  left: 20px;
+  cursor: pointer;
+}
 
 /* ===============
    builder-common
    =============== */
-.audiobook-add-builder .header {
+.add-audiobook-page .header {
   margin: 80px 120px;
 }
-.audiobook-add-builder .header .stepper {
+.add-audiobook-page .header .stepper {
   color: #43464b;
   font-weight: 700;
   font-size: 10pt;
 }
 
-.audiobook-add-builder .header h1 {
+.add-audiobook-page .header h1 {
   color: #63656a;
   font-weight: 600;
   margin-top: -7px;
   margin-bottom: -25px;
 }
 
-.audiobook-add-builder .header h2 {
+.add-audiobook-page .header h2 {
   color: #494c51;
   font-weight: 400;
   font-size: 13pt;
 }
-.audiobook-add-builder .tool-wrapper .drag-target {
+.add-audiobook-page .tool-wrapper .drag-target {
   width: 186px;
   height: 254px;
   border: 3px dashed #63656a;
@@ -41,11 +51,11 @@
 .audiobook-add-builder .fields {
   display: inline-block;
 }
-.audiobook-add-builder .fields {
+.add-audiobook-page .fields {
   width: 300px;
   margin-left: 30px;
 }
-.audiobook-add-builder .tool-wrapper .drag-target .text {
+.add-audiobook-page .tool-wrapper .drag-target .text {
   width: 166px;
   color: #9a9da3;
   font-weight: 300;
@@ -56,7 +66,7 @@
   left: 44px;
   top: 98px;
 }
-.audiobook-add-builder .fields input {
+.add-audiobook-page .fields input {
   width: 245px;
 }
 .audiobook-add-builder .tool-wrapper {
