✨custom drag-n-drop uploader with built-in preview

--- a/src/pages/admin-tools/add-audiobook/AddAudiobookPage.css
+++ b/src/pages/admin-tools/add-audiobook/AddAudiobookPage.css
@@ -45,7 +45,25 @@
   border-radius: 7px;
   position: relative;
   display: inline-block;
-  top: -53px;
+  top: -83px;
+  transition: all 0.6s;
+}
+.add-audiobook-page .tool-wrapper .drag-target.interact {
+  background-color: white;
+  transform: scale(1.2);
+}
+.add-audiobook-page .tool-wrapper .drag-target .cover-preview-loader {
+  position: absolute;
+  left: 4px;
+  top: 4px;
+  width: 178px;
+  height: 246px;
+  object-fit: cover;
+  z-index: 1;
+  border-radius: 7px;
+}
+.cover-preview-loader.hidden {
+  display: none;
 }
 .audiobook-add-builder .drag-wrapper,
 .audiobook-add-builder .fields {
@@ -91,6 +109,7 @@
 
 .add-audiobook-page .action-button {
   background-color: #6664f6;
+  color: #161c21;
   padding: 7px;
   text-align: center;
   width: 180px;
@@ -100,4 +119,18 @@
   position: relative;
   top: 30px;
   left: -30px;
+}
+.add-audiobook-page input.action-button {
+  width: 193px;
+  height: 40px;
+  left: -88px;
+  top: 35px;
+}
+.add-audiobook-page input[type='file'] {
+  width: 0.1px;
+  height: 0.1px;
+  opacity: 0;
+  overflow: hidden;
+  position: absolute;
+  z-index: -1;
 }
