--- a/src/global.css
+++ b/src/global.css
@@ -15,6 +15,10 @@ body,
 .pointer {
   cursor: pointer;
 }
+a.link {
+  text-decoration: none;
+  color: black;
+}
 /* ===============
    card
    =============== */
