📝Readme: added project-setup, routing and application context

--- a/src/pages/player/PlayerPage.css
+++ b/src/pages/player/PlayerPage.css
@@ -30,7 +30,7 @@
   display: inline-block;
 }
 .MuiListItem-root.disabled {
-  color: #85888e;
+  color: #c6cad2;
   cursor: default;
 }
 .MuiListItem-root.disabled:hover {
